Prevent screen overflow
Add nav item hover effect

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@
   height: 100vh;
   width: 100vw;
   position: relative;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .page::after {
@@ -48,4 +50,18 @@ em {
 
 .tft:hover {
   cursor:url(/small-chonc.png) 25 25, auto;
+}
+
+.nav-item {
+  z-index: 10;
+  width: 180px;
+}
+
+.nav-item:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.nav-item:hover > hr {
+  width: 5rem;
 }
